[package]
name = "api3"
version = "0.1.0"
authors = ["Anuvrat <anuvrats06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.4"
actix-web = "3"
env_logger = "0.8.3"
juniper = "0.14"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"



